--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -5,8 +5,8 @@ on:
   push:
     branches: [ "main" ]
     paths-ignore:
-      - "docs"
-      - "tmp"
+      - "docs/**"
+      - "tmp/**"
   pull_request:
     branches: [ "*" ]
 jobs:
