--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -7,8 +7,13 @@ on:
     paths-ignore:
       - "docs/**"
       - "tmp/**"
+      - "**/*.md"
   pull_request:
     branches: [ "*" ]
+    paths-ignore:
+      - "docs/**"
+      - "tmp/**"
+      - "**/*.md"
 jobs:
 
   build:
