🤖 update generator to use ubuntu-latest
Signed-off-by: cuisongliu <cuisongliu@qq.com>

--- a/.github/workflows/generator.yml
+++ b/.github/workflows/generator.yml
@@ -6,7 +6,7 @@ on:
     - cron: '0 8 * * *'
 jobs:
   generator:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
