--- a/.github/workflows/generator.yml
+++ b/.github/workflows/generator.yml
@@ -24,7 +24,9 @@ jobs:
           /tmp/cluster-image-docs
       - name: auto generator by aliyun
         run: |
-          rm -rf docs/aliyun-shanghai
+          export SYNC_DIR=docs/aliyun-shanghai
+          export SYNC_HUB=registry.cn-shanghai.aliyuncs.com/labring
+          /tmp/cluster-image-docs
       - uses: peter-evans/create-pull-request@v7
         with:
           title: 'workflow: Automated Workflow Update for ${{steps.get-current-tag.outputs.tag }}'
